--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="hero-section">
 
-                <div class="faded-text">John Doe</div>
+                <div class="faded-text">Satyam Singh</div>
     
                 <div class="hero-section-left">
                     <div class="hero-section-heading">Hi! Satyam Singh</div>
@@ -205,9 +205,7 @@
 
             <div class="skill-subHeading">
               <p>
-                Hi Everyone My name is John Doe I am a Full Stack Web Developer I
-                have been working for last 3 Years and Currently I am working with a
-                Budding Startup in USA and a full Time Freelancer. Currently I am
+                Hi Everyone My name is Satyam Singh I am a Full Stack Web Developer. Currently I am pursuing MCA in GIFT Autonomous College, Bhubaneswar and a part Time Freelancer. Currently I am
                 working on NextJs and Making Beautiful UI-UX are my fey features
               </p>
               <p>
